# helper-codes

./: .dockerignore  .gitignore  .gitmodules  compose.yaml  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
docker/: zenquotes.Dockerfile
src/: bash_alias.sh  chiachun_rc.sh
src/home/: .bash_profile  .bashrc
src/zen_quotes/: main.py  zen_quotes.py
tests/: test_chiachun_rc.bats  test_zen_quotes.py
tests/py_test/: test_zen_quotes.py
