[project]
name = "helper-codes"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.5.3,<3.0.0)",
    "requests (>=2.31.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
isort = "*"
mypy = "*"
pylint = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
